--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <link rel="stylesheet" href="/pages/fonts.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/pages/buttons.css">
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
 
 </head>
 <body>
@@ -18,7 +21,7 @@
       <nav class="navbar container">
         <div class="navbar-left">
         <ul class="menu-list">
-        <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
+        <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: 100;"></div>
         <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
         <meta name="description" content="Shop premium organic beef cooking tallow at Tallow Lancashire Co. Our pasture-raised tallow has a high smoke point for perfect cooking. Visit us in Chorley.">
       </ul>
@@ -28,25 +31,25 @@
 
             <li class="menu-item">
               <a href="#" class="menu-link is-active">
-                <img src="/components/icones/home.webp" alt="Home" class="menu-icon">
+                <img src="/components/icones/home.webp" alt="Home icon" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/about.html" class="menu-link">
-                <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/products.html" class="menu-link">
-                <img src="/components/icones/products.webp" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/products.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/contact.html" class="menu-link">
-                <img src="/components/icones/location.webp" alt="ABOUT US" class="menu-icon">
+                <img src="/components/icones/location.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
             </li>
