--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,8 +9,11 @@
     <link rel="stylesheet" href="/pages/fonts.css">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="/pages/buttons.css">
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="/pages/contact.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
     
 </head>
 <body>
@@ -30,25 +33,25 @@
         
                     <li class="menu-item">
                       <a href="../index.html" class="menu-link">
-                        <img src="/components/icones/home.webp" alt="Home" class="menu-icon">
+                        <img src="/components/icones/home.webp" alt="Home" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/about.html" class="menu-link">
-                        <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon">
+                        <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/products.html" class="menu-link">
-                        <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon">
+                        <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
                       <a href="/pages/contact.html" class="menu-link is-active">
-                        <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon">
+                        <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
                     </li>
