--- a/index.html
+++ b/index.html
@@ -5,14 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tallow Lancashire Co </title>
   <meta name="description" content="Tallow Lancashire Co - Premium organic beef tallow from pasture-raised cattle. Perfect for high-heat cooking with health benefits. Visit our shop in Chorley or browse our products online.">
-  <link rel="stylesheet" href="/pages/navbar.css">
-  <link rel="stylesheet" href="/pages/fonts.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/pages/buttons.css">
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
+<!-- Preconnect to third-party origins -->
+<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+<!-- Stylesheets -->
+<link rel="stylesheet" href="/pages/navbar.css">
+<link rel="stylesheet" href="/pages/fonts.css">
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/pages/buttons.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
 
 </head>
 <body>
