--- a/pages/about.html
+++ b/pages/about.html
@@ -5,16 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <meta name="description" content="Discover Tallow Lancashire Co's story - a family-owned business crafting premium organic cooking tallow from pasture-raised beef using traditional wet-rendering methods in Chorley.">
-    <link rel="stylesheet" href="/pages/navbar.css">
-    <link rel="stylesheet" href="/pages/fonts.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="/pages/buttons.css">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/pages/about.css">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
+<!-- Preconnect to third-party origins -->
+<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+<!-- Stylesheets -->
+<link rel="stylesheet" href="/pages/navbar.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="/pages/fonts.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="/pages/about.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="/pages/buttons.css" media="print" onload="this.media='all'">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" >
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
 </head>
 
 
