--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,15 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <meta name="description" content="Contact Tallow Lancashire Co - Visit our Chorley shop at 275 Eaves Ln or reach us at 01257 271917. Open daily 9am-7pm for premium organic cooking tallow products.">
-    <link rel="stylesheet" href="/pages/navbar.css">
-    <link rel="stylesheet" href="/pages/fonts.css">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="/pages/buttons.css">
-    <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="/pages/contact.css">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
+<!-- Preconnect to third-party origins -->
+<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+<!-- Stylesheets -->
+<link rel="stylesheet" href="/pages/navbar.css">
+<link rel="stylesheet" href="/pages/fonts.css">
+<link rel="stylesheet" href="/pages/contact.css">
+<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="/pages/buttons.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
     
 </head>
 <body>
