adding arials link

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,32 +34,32 @@
                 <div class="navbar-left">
                 <ul class="menu-list">
                 <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
-                <a href="../index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+                <a href="../index.html" class="brand" aria-label="move to home"> TALLOW LANCASHIRE CO</a>
               </ul>
               </div>
                 <div class="menu" id="menu">
                   <ul class="menu-list">
         
                     <li class="menu-item">
-                      <a href="../index.html" class="menu-link">
+                      <a href="../index.html" class="menu-link" aria-label="move to home">
                         <img src="/components/icones/home.webp" alt="Home" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/about.html" class="menu-link">
+                      <a href="/pages/about.html" class="menu-link" aria-label="move to about us">
                         <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/products.html" class="menu-link">
+                      <a href="/pages/products.html" class="menu-link" aria-label="move to products">
                         <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/contact.html" class="menu-link is-active">
+                      <a href="/pages/contact.html" class="menu-link is-active" aria-label="move to contact us">
                         <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
@@ -80,7 +80,7 @@
         <div class="contact-items">
           <div class="contact-map"> 
             <!-- GOOGLE MAP -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.340811693411!2d-2.6217963228507952!3d53.65872507238158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1sen!2suk!4v1743201533166!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2364.340811693411!2d-2.6217963228507952!3d53.65872507238158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487b0c668ea8d25b%3A0xb58046f2b8fac4a4!2sMonkey%20Mist!5e0!3m2!1sen!2suk!4v1743201533166!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" aria-label="Google maps with shop location"></iframe>
           </div>
           <div class="contact-info-add"> 
             
@@ -137,7 +137,7 @@
         <textarea name="message" placeholder="I'd like to chat about" id="message_input" cols="30" rows="5" required></textarea>
       </div>
       <div class="submit">
-        <input type="submit" value="Send Message" id="form_button" />
+        <input type="submit" value="Send Message" id="form_button" aria-label="submit form button" />
       </div>
     </form>
   </div>
@@ -161,14 +161,14 @@
 
         <div class="footer-section">
             <h3>MENU</h3>
-            <p><a href="/index.html">HOME</a></p>
-            <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="/pages/products.html">PRODUCTS</a></p>
-            <p><a href="/pages/contact.html">CONTACT</a></p>
+            <p><a href="/index.html" aria-label="move to home">HOME</a></p>
+            <p><a href="/pages/about.html" aria-label="move to about">ABOUT US</a></p>
+            <p><a href="/pages/products.html" aria-label="move to products">PRODUCTS</a></p>
+            <p><a href="/pages/contact.html" aria-label="move to contact">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61569199092253" aria-label="move to facebook"><i class="fab fa-facebook-f fa-1.5x"></i></a>
               <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
               <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a> -->
           </div>
@@ -184,7 +184,7 @@
             <br>
             <h3>TOGETHER WITH EARTHSGIFTS:</h3>
             <div class="social-icons">
-                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
+                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc" aria-label="move to tiktok"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
 
             </div>
