--- a/pages/products.html
+++ b/pages/products.html
@@ -25,32 +25,32 @@
                 <div class="navbar-left">
                 <ul class="menu-list">
                 <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
-                <a href="../index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+                <a href="../index.html" class="brand" aria-label="move to home"> TALLOW LANCASHIRE CO</a>
               </ul>
               </div>
                 <div class="menu" id="menu">
                   <ul class="menu-list">
         
                     <li class="menu-item">
-                      <a href="../index.html" class="menu-link">
+                      <a href="../index.html" class="menu-link" aria-label="move to home">
                         <img src="/components/icones/home.webp" alt="Home" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/about.html" class="menu-link">
+                      <a href="/pages/about.html" class="menu-link" aria-label="move to about us">
                         <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/produts.html" class="menu-link is-active" >
+                      <a href="/pages/produts.html" class="menu-link is-active"  aria-label="Current Link">
                         <img src="/components/icones/products.webp" alt="PRODUCTS" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
                       </a>
                     </li>
                     <li class="menu-item">
-                      <a href="/pages/contact.html" class="menu-link">
+                      <a href="/pages/contact.html" class="menu-link" aria-label="move to contact us">
                         <img src="/components/icones/location.webp" alt="CONTACT/LOCATION" class="menu-icon" style="width: 20px; height: 20px;">
                         <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
                       </a>
@@ -129,8 +129,8 @@
             <h1>VISIT OUR LANCASHIRE TALLOW SHOP</h1>
             <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
             <div class="buttons">
-              <a class="btn primary" href="tel:01257 271917">01257 271917</a>
-                <a class="btn primary" href="/pages/contact.html">Find Us On Map</a>
+              <a class="btn primary" href="tel:01257 271917" aria-label="phone to us">01257 271917</a>
+                <a class="btn primary" href="/pages/contact.html" aria-label="contact us">Find Us On Map</a>
             </div>
         </div>
     </div>
@@ -158,14 +158,14 @@
 
         <div class="footer-section">
             <h3>MENU</h3>
-            <p><a href="/index.html">HOME</a></p>
-            <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="/pages/products.html">PRODUCTS</a></p>
-            <p><a href="/pages/contact.html">CONTACT</a></p>
+            <p><a href="/index.html" aria-label="move to home">HOME</a></p>
+            <p><a href="/pages/about.html" aria-label="move to about us">ABOUT US</a></p>
+            <p><a href="/pages/products.html" aria-label="move to products">PRODUCTS</a></p>
+            <p><a href="/pages/contact.html" aria-label="move to contact">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
+              <a href="https://www.facebook.com/profile.php?id=61569199092253" arial-label="move to facebook"><i class="fab fa-facebook-f fa-1.5x"></i></a>
               <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
               <a href="#"><i class="fab fa-tiktok fa-1.5x"></i></a> -->
           </div>
@@ -181,7 +181,7 @@
             <br>
             <h3>TOGETHER WITH EARTHSGIFTS:</h3>
             <div class="social-icons">
-                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
+                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc" aria-label="move ot tiktok"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
 
             </div>
