--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="navbar-left">
         <ul class="menu-list">
         <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: 100;"></div>
-        <a href="./index.html" class="brand"> TALLOW LANCASHIRE CO</a>
+        <a href="./index.html" class="brand" aria-label="Home page"> TALLOW LANCASHIRE CO</a>
         <meta name="description" content="Shop premium organic beef cooking tallow at Tallow Lancashire Co. Our pasture-raised tallow has a high smoke point for perfect cooking. Visit us in Chorley.">
       </ul>
       </div>
@@ -39,25 +39,25 @@
           <ul class="menu-list">
 
             <li class="menu-item">
-              <a href="#" class="menu-link is-active">
+              <a href="#" class="menu-link is-active" aria-label="Current Link">
                 <img src="/components/icones/home.webp" alt="Home icon" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
               </a>
             </li>
             <li class="menu-item">
-              <a href="/pages/about.html" class="menu-link">
+              <a href="/pages/about.html" class="menu-link" aria-label="About Us">
                 <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
-              <a href="/pages/products.html" class="menu-link">
+              <a href="/pages/products.html" class="menu-link" aria-label="Products">
                 <img src="/components/icones/products.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
             <li class="menu-item">
-              <a href="/pages/contact.html" class="menu-link">
+              <a href="/pages/contact.html" class="menu-link"   aria-label="Contact Us">
                 <img src="/components/icones/location.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
@@ -83,12 +83,12 @@
       <p>Discover the Benefits of Cooking with Our Organic Tallow: Sourced from Pasture-Raised Beef, High Smoke Point for Versatile Cooking, and Packed with Health-Promoting Nutrients!</p>
       <div class="two-buttons">
         <!-- Button One  -->
-        <a class="btn btn-one" href="./pages/contact.html">
+        <a class="btn btn-one" href="./pages/contact.html" aria-label="Move to Contact Us">
           <span><h4>OUR LOCATION</h4></span>
         </a>
         
         <!-- Button Two  -->
-        <a class="btn" href="/pages/products.html">
+        <a class="btn" href="/pages/products.html" aria-label="Move to Products">
           <button class="button-two"><h4>PRODUCTS</h4></button>
         </a>
       </div>
@@ -157,7 +157,7 @@
           <h4>EXPLORE OUR STORE, FIND THE BEST COOKING TALLOW!</h4>
             <h1>CHECK OUT AVAILABLE PRODUCTS!</h1>
             <p>Pure, nutrient-rich beef tallow, slow-rendered the traditional wet way for superior quality and flavor. Choose from 3 sizes. Perfect for cooking, skincare, and more! Try it today!</p>
-            <a class="btn" href="./pages/products.html">
+            <a class="btn" href="./pages/products.html" aria-label="Move to Products">
               <button class="button-two"><h4>PRODUCTS</h4></button>
             </a>
         </div>
@@ -171,7 +171,7 @@
             <h4>WE ARE OPEN EVERY SINGLE DAY</h4>
             <h1>WE OPEN THE DOORS EVERYDAY AT 9:00. COME SAY HELLO!</h1>
             <p>Our friendly team is here to welcome you with a smile every day at 9:00! Whether you're picking up tallow or just stopping by, we’re happy to help, share tips, or chat about our products. Come say hello, we’d love to meet you!</p>
-            <a class="btn" href="./pages/contact.html">
+            <a class="btn" href="./pages/contact.html" aria-label="Move to Contact Us">
               <button class="button-two"><h4>CONTACT</h4></button>
             </a>
         </div>
@@ -190,8 +190,8 @@
         <h1>VISIT OUR LANCASHIRE TALLOW SHOP</h1>
         <p>Pop in daily from 9am to explore our premium wet-rendered tallow. Our friendly team's here to help with cooking tips, or just a chat. See you soon!</p>
         <div class="buttons">
-            <a class="btn primary" href="tel:01257 271917">01257 271917</a>
-            <a class="btn primary" href="./pages/contact.html">Find Us On Map</a>
+            <a class="btn primary" href="tel:01257 271917" aria-label="phone number - call us">01257 271917</a>
+            <a class="btn primary" href="./pages/contact.html" aria-label="Move to contact us">Find Us On Map</a>
         </div>
     </div>
 </div>
@@ -216,30 +216,27 @@
 
         <div class="footer-section">
             <h3>MENU</h3>
-            <p><a href="/index.html">HOME</a></p>
-            <p><a href="/pages/about.html">ABOUT US</a></p>
-            <p><a href="/pages/products.html">PRODUCTS</a></p>
-            <p><a href="/pages/contact.html">CONTACT</a></p>
+            <p><a href="/index.html" aria-label="Move to home">HOME</a></p>
+            <p><a href="/pages/about.html" aria-label="Move to about">ABOUT US</a></p>
+            <p><a href="/pages/products.html" aria-label="Move to products">PRODUCTS</a></p>
+            <p><a href="/pages/contact.html" aria-label="Move to contact">CONTACT</a></p>
             <br>
             <h3>ON SOCIAL MEDIA:</h3>
           <div class="social-icons">
-              <a href="https://www.facebook.com/profile.php?id=61569199092253"><i class="fab fa-facebook-f fa-1.5x"></i></a>
-              <!-- <a href="#"><i class="fab fa-instagram fa-1.5x"></i></a>
-              <a href="#"><i class="fab fa-youtube fa-1.5x"></i></a> -->
+              <a href="https://www.facebook.com/profile.php?id=61569199092253" aria-label="Move to facebook page"><i class="fab fa-facebook-f fa-1.5x"></i></a>
           </div>
         </div>
 
         <div class="footer-section">
             <h3>CONTACT US</h3>
             <p><strong>PHONE:</strong> 01257 271917</p>
-            <!-- <p><strong>E-MAIL:</strong> <a href="mailto:tallowlancashire">tallow@gmail.com</a></p> -->
             <br>
             <h3>LOCATION</h3>
             <p> 275 Eaves Ln<br> Chorley PR6 0EY</p>
             <br>
             <h3>TOGETHER WITH EARTHSGIFTS:</h3>
             <div class="social-icons">
-                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc"><i class="fab fa-tiktok fa-1.5x"></i></a>
+                <a href="https://www.tiktok.com/@earthsgifts1111?is_from_webapp=1&sender_device=pc" aria-label="Move to tiktok"><i class="fab fa-tiktok fa-1.5x"></i></a>
 
 
             </div>
