--- a/pages/about.html
+++ b/pages/about.html
@@ -5,25 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
     <meta name="description" content="Discover Tallow Lancashire Co's story - a family-owned business crafting premium organic cooking tallow from pasture-raised beef using traditional wet-rendering methods in Chorley.">
-<!-- Preconnect to third-party origins -->
-<link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
-<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
+    <!-- Helps with restoration from cache -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+    <!-- Preconnect to third-party origins -->
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+  <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+  
+  <!-- Stylesheets -->
+  <!-- Preload & inline critical CSS first -->
+  <link rel="preload" href="/pages/navbar.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/pages/navbar.css"></noscript>
+  
+  <link rel="preload" href="/pages/fonts.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/pages/fonts.css"></noscript>
+  
+  <link rel="preload" href="/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/style.css"></noscript>
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="dns-prefetch" href="https://fonts.googleapis.com">
-
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="dns-prefetch" href="https://fonts.gstatic.com">
-
-<!-- Stylesheets -->
-<link rel="stylesheet" href="/pages/navbar.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="/pages/fonts.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="/pages/about.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="/style.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="/pages/buttons.css" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" >
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap">
-</head>
+  <link rel="preload" href="/pages/about.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/pages/about.css"></noscript>
+  
+  <link rel="preload" href="/pages/buttons.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="/pages/buttons.css"></noscript>
+  
+  <!-- Preload Font Awesome (CDN) -->
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
+  
+  <!-- Preload Google Fonts (with &display=swap for non-blocking behavior) -->
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap"></noscript>
 
 
 <body>
@@ -33,8 +54,12 @@
           <nav class="navbar container">
             <div class="navbar-left">
             <ul class="menu-list">
+              <li>
             <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: auto;"></div>
+          </li>
+          <li>
             <a href="../index.html" class="brand" aria-label="move to home"> TALLOW LANCASHIRE CO</a>
+          </li>
           </ul>
           </div>
             <div class="menu" id="menu">
@@ -111,7 +136,7 @@
   <div class="wrapper">
   
     <div class="box">
-      <h3 class="heading">Step 1</h3>
+      <h2 class="heading">Step 1</h2>
       <div class="progress-bar">
         <div class="bg-bar"></div>
         <div class="active-bar"></div>
