--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap"></noscript>
 
+<link rel="preload" fetchpriority="high" as="image" href="/components/icones/about.webp" type="image/webp">
+<link rel="preload" fetchpriority="high" as="image" href="/components/icones/home.webp" type="image/webp">
+<link rel="preload" fetchpriority="high" as="image" href="/components/icones/products.webp" type="image/webp">
+<link rel="preload" fetchpriority="high" as="image" href="/components/icones/location.webp" type="image/webp">
+
+
+
+
 </head>
 <body>
   <header>
