--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
 <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abel&family=Inter:wght@100..900&display=swap"></noscript>
 
+<link rel="preload" as="image" href="/components/photos/tallow-hero-bg-800.webp" imagesrcset="
+  /components/photos/tallow-hero-bg-400.webp 400w,
+  /components/photos/tallow-hero-bg-600.webp 600w,
+  /components/photos/tallow-hero-bg-800.webp 800w,
+  /components/photos/tallow-hero-bg-1200.webp 1200w,
+  /components/photos/tallow-hero-bg-1600.webp 1600w
+" imagesizes="(max-width: 600px) 100vw, (max-width: 1200px) 100vw, 1200px">
+
+<link rel="preload" href="/components/icones/home-15.webp" as="image" type="image/webp" />
+<link rel="preload" href="/components/icones/about-15.webp" as="image" type="image/webp" />
+<link rel="preload" href="/components/icones/products-15.webp" as="image" type="image/webp" />
+<link rel="preload" href="/components/icones/location-15.webp" as="image" type="image/webp" />
+
+
+
 </head>
 <body>
   <header>
@@ -52,7 +67,7 @@
         <div class="navbar-left">
         <ul class="menu-list">
           <li>
-        <div class="logo-black"> <img src="/components/photos/logo-white.webp" alt="Logo Black" style="width: 60px; height: 100;"></div>
+        <div class="logo-black"> <img src="/components/photos/logo-white.webp" imagesizes="(max-width: 600px) 5px, 5px"  alt="Logo Black" style="width: 60px; height: 100;"></div>
       </li>
       <li>
         <a href="./index.html" class="brand" aria-label="Home page"> TALLOW LANCASHIRE CO</a>
@@ -65,25 +80,58 @@
 
             <li class="menu-item">
               <a href="#" class="menu-link is-active" aria-label="Current Link">
-                <img src="/components/icones/home.webp" alt="Home icon" class="menu-icon" style="width: 20px; height: 20px;">
+                <img src="/components/icones/home-15.webp" alt="Home Icon" imagesrcset="
+                    /components/icones/home-15.webp 15w,
+                    /components/icones/home-20.webp 20w
+                  "
+                  imagesizes="(max-width: 600px) 15px, 15px" 
+                  fetchpriority="high"
+                  decoding="async"
+                  loading="eager"
+                >
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Home</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/about.html" class="menu-link" aria-label="About Us">
-                <img src="/components/icones/about.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
+                <img src="/components/icones/about-15.webp" alt="Home Icon" imagesrcset="
+                /components/icones/about-15.webp 15w,
+                /components/icones/about-20.webp 20w
+              "
+              imagesizes="(max-width: 600px) 15px, 15px" 
+              fetchpriority="high"
+              decoding="async"
+              loading="eager"
+            >
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">About</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/products.html" class="menu-link" aria-label="Products">
-                <img src="/components/icones/products.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
+                <img src="/components/icones/products-15.webp" alt="Home Icon" imagesrcset="
+                    /components/icones/products-15.webp 15w,
+                    /components/icones/products-20.webp 20w
+                  "
+                  imagesizes="(max-width: 600px) 15px, 15px" 
+                  fetchpriority="high"
+                  decoding="async"
+                  loading="eager"
+                >
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem);">Products</span>
               </a>
             </li>
             <li class="menu-item">
               <a href="/pages/contact.html" class="menu-link"   aria-label="Contact Us">
-                <img src="/components/icones/location.webp" alt="ABOUT US" class="menu-icon" style="width: 20px; height: 20px;">
+                <img src="/components/icones/location-15.webp" alt="Home Icon" imagesrcset="
+                /components/icones/location-15.webp 15w,
+                /components/icones/location-20.webp 20w
+              "
+              imagesizes="(max-width: 600px) 15px, 15px" 
+              fetchpriority="high"
+              decoding="async"
+              loading="eager"
+            >
+
                 <span class="menu-name" style="font-size: clamp(0.7rem, 2.5vw, 1rem)">Contact</span>
               </a>
             </li>
@@ -97,7 +145,21 @@
 <section>
   <!-- text on banner -->
   <div class="hero-banner">
-    <img src="/components/photos/tallow-hero-bg.webp" alt="Hero banner" fetchpriority="high">
+    <img 
+  src="/components/photos/tallow-hero-bg-800.webp" 
+  srcset="
+    /components/photos/tallow-hero-bg-400.webp 400w,
+    /components/photos/tallow-hero-bg-600.webp 600w,
+    /components/photos/tallow-hero-bg-800.webp 800w,
+    /components/photos/tallow-hero-bg-1200.webp 1200w,
+    /components/photos/tallow-hero-bg-1600.webp 1600w
+  "
+  sizes="(max-width: 600px) 100vw, (max-width: 1200px) 100vw, 1200px"
+  alt="Hero banner"
+  fetchpriority="high"
+  decoding="async"
+  loading="eager"
+/>
     
     <div class="white-logo-banner">
       <img src="/components/photos/logo-white-tallow.webp" alt="Logo" style="width: 200px; height: auto;" loading="lazy">
