--- a/index.html
+++ b/index.html
@@ -84,13 +84,14 @@
         <div class="navbar-left">
         <ul class="menu-list">
           <li>
-        <div class="logo-black"> <img 
-          src="/components/photos/logo-white-200.webp" 
+        <div class="logo-black">
+          <img 
+          src="./components/photos/logo-on-white-bg-200.webp" 
           srcset="
             components/photos/logo-on-white-bg-100.webp 120w,
           "
           sizes="(max-width: 600px) 60px, 60px"
-          style="aspect-ratio: 3 / 2; width: 100%; height: auto;"
+          style="aspect-ratio: 3 / 3; width: 100%; height: auto;"
           alt="Logo Black"
           loading="lazy"
           decoding="async"
